// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportArtifactModal.vue Should let the user edit the name and ABI when parameters are valid 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Update Contract Metadata</div>
          <div class="v-card__text">
            <div role="alert" class="v-alert v-sheet theme--dark success">Metadata updated</div>
            <!---->
            <div class="mb-3">
              Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br>
              Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail.
            </div>
            <div>
              <div class="v-input mb-3 v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Contract Name</label><input primary="" id="contractName" type="text"></div>
                  </div>
                </div>
              </div>
              <div class="v-input v-textarea v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractAbi" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">ABI</label><textarea primary="" id="contractAbi" rows="5"></textarea></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
              Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br> <input type="file" id="fileUploader" accept="application/json">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="updateContract"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportArtifactModal.vue Should let the user upload a file containing contract metadata 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Update Contract Metadata</div>
          <div class="v-card__text">
            <div role="alert" class="v-alert v-sheet theme--dark success">Metadata updated</div>
            <!---->
            <div class="mb-3">
              Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br>
              Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail.
            </div>
            <div>
              <div class="v-input mb-3 v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Contract Name</label><input primary="" id="contractName" type="text"></div>
                  </div>
                </div>
              </div>
              <div class="v-input v-textarea v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractAbi" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">ABI</label><textarea primary="" id="contractAbi" rows="5"></textarea></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
              Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br> <input type="file" id="fileUploader" accept="application/json">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="updateContract"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportArtifactModal.vue Should warn the user if the ABI is not valid 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Update Contract Metadata</div>
          <div class="v-card__text">
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark error">Invalid ABI</div>
            <div class="mb-3">
              Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br>
              Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail.
            </div>
            <div>
              <div class="v-input mb-3 v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Contract Name</label><input primary="" id="contractName" type="text"></div>
                  </div>
                </div>
              </div>
              <div class="v-input v-textarea v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractAbi" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">ABI</label><textarea primary="" id="contractAbi" rows="5"></textarea></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
              Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br> <input type="file" id="fileUploader" accept="application/json">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="updateContract"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportArtifactModal.vue Should warn the user if the ABI is not valid json 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Update Contract Metadata</div>
          <div class="v-card__text">
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark error">Invalid JSON format</div>
            <div class="mb-3">
              Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br>
              Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail.
            </div>
            <div>
              <div class="v-input mb-3 v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Contract Name</label><input primary="" id="contractName" type="text"></div>
                  </div>
                </div>
              </div>
              <div class="v-input v-textarea v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: -24px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractAbi" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">ABI</label><textarea primary="" id="contractAbi" rows="5"></textarea></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
              Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br> <input type="file" id="fileUploader" accept="application/json">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="updateContract"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportArtifactModal.vue Should warn the user if the file is invalid 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Update Contract Metadata</div>
          <div class="v-card__text">
            <div role="alert" class="v-alert v-sheet theme--dark success">Metadata updated</div>
            <!---->
            <div class="mb-3">
              Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br>
              Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail.
            </div>
            <div>
              <div class="v-input mb-3 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: 0px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractName" class="v-label theme--light" style="left: 0px; position: absolute;">Contract Name</label><input primary="" id="contractName" type="text"></div>
                  </div>
                </div>
              </div>
              <div class="v-input v-textarea v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: 0px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><label for="contractAbi" class="v-label theme--light" style="left: 0px; position: absolute;">ABI</label><textarea primary="" id="contractAbi" rows="5"></textarea></div>
                  </div>
                </div>
              </div>
              <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
              Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br> <input type="file" id="fileUploader" accept="application/json">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="updateContract"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
